# codephreak-security-auditor

./: .git-config-preferences  .gitignore  HYBRID_ARCHITECTURE_IMPLEMENTATION_REPORT.md  LICENSE  README.md  REPOSITORY_STRUCTURE.md  TEST_HARNESS_VALIDATION_REPORT.md  demo_hybrid_scanner.py  demo_scanner.py  pyproject.toml  security_audit_report.json  standalone_hybrid_demo.py
.github/workflows/: ci.yml.backup
docker/: Dockerfile  entrypoint.sh
docs/: INSTALLATION.md  SPECIFICATION_V2.md
src/codephreak/: __init__.py
src/codephreak/security_auditor/: auth.py  cli.py  cloud_client.py  config.py  core.py  enhanced_cli.py  hybrid_engine.py  local_scanner.py  models.py
tests/fixtures/: README.md  test_runner.py
tests/fixtures/vulnerable_apps/docker_app/: Dockerfile  docker-compose.yml
tests/fixtures/vulnerable_apps/javascript_app/: package.json  server.js
tests/fixtures/vulnerable_apps/python_app/: app.py  requirements.txt
